# ars

./: .gitignore  CMakeLists.txt  README.md  app.cpp  run_app.sh  run_tests.sh
.cache/clangd/index/: ArgsData.cpp.DA5805AE32920A89.idx  ArgsData.h.C050E758928235AE.idx  JsonReader.cpp.96F534F751EA2247.idx  JsonReader.h.BDA71E1AB9E955E2.idx  Reader.cpp.F299A013001244F0.idx  base.h.D54E1672CF0B40A1.idx  common.h.E2EDED0919C1F242.idx  distribution.cpp.0A8B7A9D4242748B.idx  distribution.h.210A480CB96AFC56.idx  format-inl.h.D76961FB305A0DB3.idx  format.cc.B284ECA0D29B4F2F.idx  format.h.9721B49A674A35B3.idx  main.cpp.15F97B774441963D.idx  mapper.cpp.8B90DE525D467538.idx  os.cc.EB7843FF5C72E0EB.idx  os.h.CADE65106E4F4CF7.idx  syntaxChecker.cpp.A035FADE6F7F03ED.idx  syntaxChecker.h.A12D65B04EA9A1C4.idx
include/: ArgsData.h  Dispacher.h  FileWriter.h  FileWritter.h  JsonReader.h  Parser.h  common.h  distribution.h  syntaxAnalizer.h  syntaxChecker.h  syntaxFormatter.h  syntaxParser.h
src/: main.cpp
src/com/: ArgsData.cpp  Dispacher.cpp  FileWriter.cpp  FileWritter.cpp  JsonReader.cpp  Parser.cpp  distribution.cpp  syntaxAnalizer.cpp  syntaxChecker.cpp  syntaxFormatter.cpp  syntaxParser.cpp
test/: CMakeLists.txt  config.json  main.cpp  main_test.cpp
